Fixed icons being stacked too close on mobile

--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -623,6 +623,7 @@ a:hover {
 #tech-cons img{
   width: 2rem;
   margin-right: 1rem;
+  margin-bottom: 1rem;
 }
 
 /*--------------------------------------------------------------
